@@ -1,6 +1,5 @@
 package br.edu.infnet.robsongallinaapi.controller;
 
-import br.edu.infnet.robsongallinaapi.controller.GamesController;
 import br.edu.infnet.robsongallinaapi.model.BoardGame;
 import br.edu.infnet.robsongallinaapi.model.Game;
 import br.edu.infnet.robsongallinaapi.model.Publisher;
@@ -9,26 +8,36 @@ import br.edu.infnet.robsongallinaapi.service.GameService;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
+import org.springframework.boot.test.context.TestConfiguration;
+import org.springframework.context.annotation.Bean;
 import org.springframework.http.MediaType;
-import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
 
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 @WebMvcTest(GamesController.class)
-class GameControllerTest {
+class GamesControllerTest {
 
     @Autowired
     private MockMvc mockMvc;
 
-    @MockitoBean
+    @Autowired
     private GameService gameService;
+
+    @TestConfiguration
+    static class MockConfig {
+        @Bean
+        public GameService gameService() {
+            return mock(GameService.class);
+        }
+    }
 
     @Test
     void findAll_shouldReturnListOfGamesAndOkStatus() throws Exception {
@@ -37,7 +46,7 @@ class GameControllerTest {
 
         Game videoGame = new VideoGame(1L, "Stardew Valley", "Simulation", 2016, true, true, "PC", "ConcernedApe", publisherVg);
         Game boardGame = new BoardGame(2L, "Catan", "Strategy", 1995, true, true, 3, 4, publisherBg);
-        List<Game> gamesList = Arrays.asList(videoGame, boardGame);
+        List<Game> gamesList = List.of(videoGame, boardGame);
 
         when(gameService.findAll()).thenReturn(gamesList);
 
@@ -49,5 +58,14 @@ class GameControllerTest {
                 .andExpect(jsonPath("$[0].platform").value("PC"))
                 .andExpect(jsonPath("$[1].title").value("Catan"))
                 .andExpect(jsonPath("$[1].minPlayers").value(3));
+    }
+
+    @Test
+    void findById_whenNotFound_shouldReturnNotFound() throws Exception {
+        when(gameService.findById(99L)).thenReturn(Optional.empty());
+
+        mockMvc.perform(get("/games/99")
+                        .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isNotFound());
     }
 }
